    declare c as character aligned as N bytes

where `N` is presumed to be an integer constant.

** `_BitInt` multi-declarations
Declarations like:

    declare x, y as bit precise integer 4

are now correct.

** `CDECL_TEST=false` tests
Fixed these tests.

** `CDECL_TEST=true` & `--no-config`
Specifying the `--no-config` option now always works even when testing.

** Glob help
Fixed glob help.

** K&R C typeless parameters in English
To match gibberish output, K&R C typeless parameters now print `as integer` in
pseudo-English:

    cdecl> set c17
    cdecl> explain char f(x)
    declare f as function (x as integer) returning character

** `show ::FILE`
Fixed a crash.

** `show` fixed glob
Now, showing a specific glob (one having no `*`s in it) like:

    c++decl> show ::FILE

will show the definition of `FILE` even though it's predefined and not the
default of user-defined.

** `typedef` modifiers
Attempting to use modifiers with `typedef`s is now correctly forbidden, e.g.:

    typedef int T
    explain unsigned T                  // error

** Unknown names
Now checking for unknown names in pointer-to-member and reference declarations.


* Changes in Cdecl 18.0

** Allowing blocks & user-defined literals in multi-declarations
Apple blocks and C++ user-defined literals are now correctly allowed in multi-
declarations, e.g.:

    int i, a[2], (^b)(char), f(double), operator~(S&), operator""_x(char)

** `cast` & `declare` command executable name support
Support for the `cast` & `declare` command as the executable name has been
dropped; only the `explain` command is still supported.  (I didn't realize
until now that `declare` conflicts with the shell built-in.)`

** Cast to `typedef`
Casting to a `typedef`d type is fixed:

    cdecl> typedef int T
    cdecl> cast x into T
    (T)x

** C99 language extensions
Fixed printing of C99 language extention names.

** `CDECL_DEBUG` environment variable
If set to an "affirmative" value (one of 1, t, true, y, or yes, case-