@@ -739,7 +739,8 @@ void c_ast_set_parameter_pack( c_ast_t *ast );
  * @param child_ast The "child" AST node to set the parent of; may be NULL.  If
  * it already has a parent, it's overwritten.
  * @param parent_ast The "parent" AST node to set the child of; may be NULL.
- * If it already has a child, it's overwritten.
+ * If not NULL, it must be of kind #K_ANY_PARENT.  If it already has a child,
+ * it's overwritten.
  */
 void c_ast_set_parent( c_ast_t *child_ast, c_ast_t *parent_ast );
 
